{
  "version": 4,
  "terraform_version": "1.10.2",
  "serial": 37,
  "lineage": "ed9cc3ab-5af4-c978-baeb-8c80301b47e1",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-26T15:37:42.702-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [
              "0.0.0.0/0"
            ],
            "direction": "EGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stalwart-elixir-458022-d5/global/firewalls/managementbigcommerce-allow-egress",
            "log_config": [],
            "name": "managementbigcommerce-allow-egress",
            "network": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
            "priority": 1000,
            "project": "stalwart-elixir-458022-d5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/firewalls/managementbigcommerce-allow-egress",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              },
              {
                "ports": [],
                "protocol": "tcp"
              },
              {
                "ports": [],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-05-27T02:55:31.320-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stalwart-elixir-458022-d5/global/firewalls/managementbigcommerce-allow-internal",
            "log_config": [],
            "name": "managementbigcommerce-allow-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
            "priority": 1000,
            "project": "stalwart-elixir-458022-d5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/firewalls/managementbigcommerce-allow-internal",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "iap_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-26T15:31:55.918-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stalwart-elixir-458022-d5/global/firewalls/managementbigcommerce-iap-ssh",
            "log_config": [],
            "name": "managementbigcommerce-iap-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
            "priority": 1000,
            "project": "stalwart-elixir-458022-d5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/firewalls/managementbigcommerce-iap-ssh",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "iap-ssh"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_api",
            "google_project_service.iap_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "mongodb_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "27017"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-26T15:24:01.078-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/stalwart-elixir-458022-d5/global/firewalls/managementbigcommerce-mongodb-firewall",
            "log_config": [],
            "name": "managementbigcommerce-mongodb-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
            "priority": 1000,
            "project": "stalwart-elixir-458022-d5",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/firewalls/managementbigcommerce-mongodb-firewall",
            "source_ranges": [
              "10.0.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "mongodb-server"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "mongodb_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250523",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/zones/europe-west1-b/disks/managementbigcommerce-mongodb"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/stalwart-elixir-458022-d5/zones/europe-west1-b/instances/managementbigcommerce-mongodb",
            "instance_id": "5947087926156940525",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "M8XQ1GoeBto=",
            "metadata_startup_script": "#!/bin/bash\r\napt-get update\r\n    \r\n# Install MongoDB\r\nwget -qO - https://www.mongodb.org/static/pgp/server-7.0.asc | sudo apt-key add -\r\necho \"deb [ arch=amd64,arm64 ] https://repo.mongodb.org/apt/ubuntu jammy/mongodb-org/7.0 multiverse\" | sudo tee /etc/apt/sources.list.d/mongodb-org-7.0.list\r\napt-get update\r\napt-get install -y mongodb-org\r\n    \r\n# Configure MongoDB for network access\r\nsed -i 's/bindIp: 127.0.0.1/bindIp: 0.0.0.0/' /et [...]
            "name": "managementbigcommerce-mongodb",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
                "network_ip": "10.0.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/regions/europe-west1/subnetworks/managementbigcommerce-subnet-mongo",
                "subnetwork_project": "stalwart-elixir-458022-d5"
              }
            ],
            "project": "stalwart-elixir-458022-d5",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/zones/europe-west1-b/instances/managementbigcommerce-mongodb",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "iap-ssh",
              "mongodb-server"
            ],
            "tags_fingerprint": "mSvy2xGkmw4=",
            "zone": "europe-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_subnetwork.mongo_subnet",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
            "mtu": 0,
            "name": "managementbigcommerce-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "project": "stalwart-elixir-458022-d5",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc"
          },
          "dependencies": [
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "nat_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-27T01:49:11.385-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/stalwart-elixir-458022-d5/regions/europe-west1/routers/managementbigcommerce-nat-router",
            "name": "managementbigcommerce-nat-router",
            "network": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
            "project": "stalwart-elixir-458022-d5",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/regions/europe-west1/routers/managementbigcommerce-nat-router"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "stalwart-elixir-458022-d5/europe-west1/managementbigcommerce-nat-router/managementbigcommerce-nat-gateway",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "managementbigcommerce-nat-gateway",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "stalwart-elixir-458022-d5",
            "region": "europe-west1",
            "router": "managementbigcommerce-nat-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_compute_router.nat_router",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "mongo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-26T15:18:37.216-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/stalwart-elixir-458022-d5/regions/europe-west1/subnetworks/managementbigcommerce-subnet-mongo",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "managementbigcommerce-subnet-mongo",
            "network": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "stalwart-elixir-458022-d5",
            "purpose": "PRIVATE",
            "region": "europe-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/regions/europe-west1/subnetworks/managementbigcommerce-subnet-mongo",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_api"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-10T15:23:46.348-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/stalwart-elixir-458022-d5/regions/europe-west3/subnetworks/managementbigcommerce-subnet",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "managementbigcommerce-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/global/networks/managementbigcommerce-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "stalwart-elixir-458022-d5",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/stalwart-elixir-458022-d5/regions/europe-west3/subnetworks/managementbigcommerce-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.vpc_network",
            "google_project_service.compute_api"
          ]
        }
      ]
    }
  ]
}